Fix footer social media icons does not align with the links

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,51 +10,33 @@
     font-size: 0.8rem;
     white-space: nowrap;
     margin: auto;
-    padding: 2vw 0vw 4vw;
+    padding: 40px 10% 4vw 10%;
 }
-    
-.flex-gap {
-    display: inline-flex;
-    flex-wrap: wrap;
-    gap: 3vw;
+
+.footer-logo {
+  width: 20%;
+  height: auto;
 }
+
+.footer-social-media {
+  display: flex;
   
-.flex-gap img {
-    width: 5%;
+  align-items: center;
+  width: 100%;
 }
 
-.center, .center-left{
-    align-items: center;
+@media (max-width: 640px) {
+  .footer-social-media {
     justify-content: center;
-    text-align: center;
+  }
 }
 
-.disappear{
-    width: 0%;
+@media (min-width: 641px) {
+  .footer-social-media {
+    justify-content: flex-end;
+  }
 }
 
-
-
-@media screen and (min-width: 992px) {    
-    #footer{
-        font-size: 1rem;
-        height: 10vw;
-    }
-
-    .disappear{
-        width: 15%;
-        margin: 0vw 10vw;
-    }
-
-    .flex-gap img {
-        width: 8%;
-    }
-    
-}
-
-@media screen and (min-width: 1200px) {    
-    #footer{
-        font-size: 1.25rem;
-    }
-    
+.footer-social-media > * + * {
+  margin-left: 30px;
 }
